fixes ASRA-88, text for accepting terms and conditions overlap

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -1978,6 +1978,7 @@ table.tbl2 {
   font-size: 16px;
   color: #626262;
   text-align: left;
+  line-height: 18px;
 }
 
 .chkbx-chk {
@@ -2506,7 +2507,7 @@ table.tbl2 {
 .modal-title {
   margin: 0;
   line-height: 1.5;
-  text-align: 'center';
+  text-align: "center";
 }
 
 .modal-header::after {
